k8s/infra/manifests/traefik/anton-ing-route.yaml
# gitlab-ext.ts.yaml
apiVersion: traefik.io/v1alpha1
kind: TraefikService
metadata:
  name: anton-router
  namespace: traefik
spec:
  loadBalancer:
    passHostHeader: true
    servers:                
      - url: https://192.168.1.2:8006     
      - url: https://192.168.1.3:8006
--

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: anton-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`anton.internal.gabhendm.com`)
      kind: Rule
      services:
        - name: anton-router
          kind: TraefikService
